quiz apply improvements

--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -126,10 +126,6 @@
                     case 4: // pode mais de 1 radio
                         template = createMoreThanOne(question);
                         break;
-                    case 5: // valor
-                        break;
-                    case 5: // data
-                        break;
                     case 7: // pode mais de 1
                         template = createList(question, true);
                         break;
@@ -380,7 +376,7 @@
         <script type="text/template" id="texti-template">
             <div>
                 <p><b></b></p>
-                <label for="obs" style='color:black; font-weight: bold; float:left; padding-right:20px' >esq ini</label>
+                <label id='labelleft' for="obs" style='color:black; font-weight: bold; float:left; padding-right:20px' >esq ini</label>
                 <span style='float:left; padding-right:145px' ><br/><br/><br/><br/>_</span>
 
                 <div class="input-prepend" style='float:left; padding-right:10px'>
