budget print improvements

--- a/src/main/webapp/budget/budget.html
+++ b/src/main/webapp/budget/budget.html
@@ -167,21 +167,54 @@
                   <input class="xlarge disabled" disabled="true" id="auditstr" name="auditstr"  type="text"/>
                 </div>
               </div>                     
+            </span>
+            <span class="span18">
               <div class="clearfix">
+              <div class="clearfix" id="classattr">
                 <label for="terms1">Termos</label>
                   <div class="input">
                     <div class="inline-inputs">
                         <select name="terms1" id="terms1"></select>
                     </div>
                   </div>
-              </div>
-              <div class="clearfix">
                 <label for="terms">Termos</label>
                   <div class="input">
                     <div class="inline-inputs">
                         <select name="terms" id="terms"></select>
                     </div>
                   </div>
+                <label for="stype">Tipo</label>
+                <div class="input">
+                  <div class='inline-inputs'>
+                    <div class="input-prepend" style='float:left; padding-right:10px'>
+                      <input class="xlarge" id="projectClassPrintType" name="projectClassPrintType"  type="text"/>
+                    </div>
+                    <div class="input-prepend" style='float:left; padding-right:10px'>
+                      <span class='label-inline'>
+                          Cabec
+                      </span>
+                      <input class="xlarge" id="projectClassHeaderStyle" name="projectClassHeaderStyle"  type="text"/>
+                    </div>
+                    <div class="input-prepend" style='float:left; padding-right:10px'>
+                      <span class='label-inline'>
+                          Corpo
+                      </span>
+                      <input class="xlarge" id="projectClassBodyStyle" name="projectClassBodyStyle"  type="text"/>
+                    </div>
+                    <div class="input-prepend" style='float:left; padding-right:10px'>
+                      <span class='label-inline'>
+                          Conteudo
+                      </span>
+                      <input class="xlarge" id="projectClassContentStyle" name="projectClassContentStyle"  type="text"/>
+                    </div>
+                    <div class="input-prepend" style='float:left; padding-right:10px'>
+                      <span class='label-inline'>
+                          Colunas
+                      </span>
+                      <input class="xlarge" id="projectClassColumns" name="projectClassColumns"  type="text"/>
+                    </div>
+                  </div>
+                </div>
               </div>
             </span>
           </span>
