--- a/src/main/webapp/project/edit_class.html
+++ b/src/main/webapp/project/edit_class.html
@@ -40,6 +40,50 @@
             </div>
           </div>
           <div class="clearfix">
+            <label for="printType">Tipo impressão</label>
+            <div class="input">
+              <div class='inline-inputs'>
+                <div class="input-prepend" style='float:left; padding-right:10px'>
+                  <select class="medium" id="printType" name="printType" >
+                  </select>
+                  <span class="help-block"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix">
+              <label for="headerStyle">Cabeçalho</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="headerStyle" name="headerStyle" size="16"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="clearfix">
+              <label for="bodyStyle">Corpo</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="bodyStyle" name="bodyStyle" size="16"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="clearfix">
+              <label for="contentStyle">Conteúdo</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="contentStyle" name="contentStyle" size="16"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="clearfix">
+              <label for="columns">Colunas</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="columns" name="columns" size="16"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="clearfix">
               <label for="obs">Observação</label>
               <div class="input">
                 <div class="input-prepend">
