--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -609,12 +609,14 @@
     </div>
     <div class="pill-content">
         <div id="images" class='tab_content'>
-            <form id="MyForm" action="http://api2.transloadit.com/assemblies" enctype="multipart/form-data" method="POST">
+            <form class="lift:UploadImageCustomer?form=post;multipart=true">
+            <!--form id="MyForm" action="http://api2.transloadit.com/assemblies" enctype="multipart/form-data" method="POST"-->
+                <input type="hidden" name='id' id="id_user_images"/>
                 <input type="hidden" name="params" value="{&quot;auth&quot;:{&quot;key&quot;:&quot;7f81cf59322e4238adec65c94cdcfe5b&quot;},&quot;template_id&quot;:&quot;49786b3752fe43a59ba5dc06d92d80ff&quot;,&quot;redirect_url&quot;:&quot;#&quot;}" />
-                <input type="file" name="my_file" />
+                <input type="file" name="file" />
                 <input type="submit" class="btn success" value="Enviar">
             </form>
-            <script type="text/javascript" src="//assets.transloadit.com/js/jquery.transloadit2.js"></script>
+            <!--script type="text/javascript" src="//assets.transloadit.com/js/jquery.transloadit2.js"></script>
             <script type="text/javascript">
                 // We call .transloadit() after the DOM is initialized:
                 $(document).ready(function() {
@@ -626,7 +628,7 @@
                 
                 }
                 });
-            </script>
+            </script-->
             <span class="lift:CustomerSnippet.imageList"></span>
         </div>
         <div id="account" class='tab_content'>
@@ -1010,6 +1012,7 @@
     <script type='text/javascript'>
         $(function() {
          $("#id_user_image").val(gup("id"));
+         $("#id_user_images").val(gup("id"));
          $("#generate-id").on('click', function() {
             $.get('/customer/next_id', function(r) {
                 eval("obj=" + r);
