--- a/src/main/webapp/templates-hidden/footer.html
+++ b/src/main/webapp/templates-hidden/footer.html
@@ -1,4 +1,29 @@
 <span>
+         <style type="text/css">
+         .mobil{
+            display: none;
+         }
+         @media only screen and (max-width: 600px){
+            .desk{
+               display: none;
+            }
+            .mobil{
+               display: block;
+            }
+         }
+         </style>
+         <div class="desk">
+            <a target="new" href="https://web.whatsapp.com/send?phone=+553191540340&text=Marque sua consulta pelo WhatsApp" style="position: fixed; z-index: 9999; bottom: 20px;
+               right: 20px;">
+               <img src="/images/whatsapp.png" style="width: 100px;" />
+            </a>
+         </div>
+         <div class="mobil">
+            <a target="new" href="whatsapp://send?phone=+553191540340&text=Marque sua consulta pelo WhatsApp" style="position: fixed; z-index: 9999; bottom: 20px;
+               right: 20px;">
+               <img src="/images/whatsapp.png" style="width: 100px;" />
+            </a>
+         </div>      
 	<div class="upper_footer">
 	     <div class="container clearfix">
 	       <ul class="footer_nav">
