--- a/src/main/webapp/financial_admin/account_ofx_conciliation.html
+++ b/src/main/webapp/financial_admin/account_ofx_conciliation.html
@@ -93,9 +93,19 @@
           if (row[11] != "0") { // ap1.conciliate
             ret = ""
           } else {
-            ret = "<a href='#' data-id='" + row [8] + "' data-idofx='" + row [4] + "' class='action_consolidate'><img width='16px' title='consolidar lançamento simples' src='/images/consolidate.png'></a>" +
+            ret = "<a href='#' " + 
+              "data-id='" + row [8] + "' " +
+              "data-vap='" + row [6] + "' " +
+              "data-idofx='" + row [4] + "' " +
+              "data-vofx='" + row [3] + "' " +
+              "class='action_consolidate'><img width='16px' title='consolidar lançamento simples' src='/images/consolidate.png'></a>" +
               "<img width='16px' src='/images/transparent1.png'>" +
-              "<a href='#' data-id='" + row [8] + "' data-idofx='" + row [4] + "' class='action_conciliate'><img width='16px' title='conciliar lançamento simples' src='/images/tick.png'></a>" 
+              "<a href='#' " +
+                "data-id='" + row [8] + "' " +
+                "data-vap='" + row [6] + "' " +
+                "data-idofx='" + row [4] + "' " +
+                "data-vofx='" + row [3] + "' " +
+                "class='action_conciliate'><img width='16px' title='conciliar lançamento simples' src='/images/tick.png'></a>" 
           }
         } else {
           ret = ""
@@ -133,24 +143,28 @@
                             "<a href='#' " +
                 "data-id='" + row [10] + "' " + 
                 "data-idofx='" + row [4] + "' " +
+                "data-vofx='" + row [3] + "' " +
                 "data-vaggreg='" + row [9] + "' " +
                 "class='action_consolidate_aggreg_partial'><img width='16px' title='consolidar parcialmente lançamentos agregados' src='/images/partial_consol.png'></a>" +
                 "<img width='16px' src='/images/transparent1.png'>" +
                 "<a href='#' " + 
                 "data-id='" + row [10] + "' " +
                 "data-idofx='" + row [4] + "' " +
+                "data-vofx='" + row [3] + "' " +
                 "data-vaggreg='" + row [9] + "' " +
                 "class='action_conciliate_aggreg_partial'><img width='16px' title='conciliar parcialmente lançamentos agregados' src='/images/partial_concil.png'></a>"
             }
             ret = "<a href='#' " +
               "data-id='" + row [10] + "' " + 
               "data-idofx='" + row [4] + "' " +
+              "data-vofx='" + row [3] + "' " +
               "data-vaggreg='" + row [9] + "' " +
               "class='action_consolidate_aggreg'><img width='16px' title='consolidar lançamentos agregados' src='/images/consolidate.png'></a>" +
               "<img width='16px' src='/images/transparent1.png'>" +
               "<a href='#' " + 
               "data-id='" + row [10] + "' " +
               "data-idofx='" + row [4] + "' " +
+              "data-vofx='" + row [3] + "' " +
               "data-vaggreg='" + row [9] + "' " +
               "class='action_conciliate_aggreg'><img width='16px' title='conciliar lançamentos agregados' src='/images/tick.png'></a>" + retparcial
           }
@@ -166,7 +180,7 @@
         var ret = "";
         if (row[8] != "0") { // api.id
           var dataaux = "";
-          dataaux = getDateBr(FactoryDate.byTime(row[0]))
+          dataaux = getDateBr(FactoryDate.byTime(row[7]))
           return "<a target='_drilldown' href='/financial/account_register?account_categories_filter1="+row[13]+"&start_date="+dataaux+"&end_date="+dataaux+"'>"+"<img width='16px' src=\"/images/" + 
               (row[11] == "0" ? 'audit' : (row[11] == "1" ? 'tick' : 'consolidate')) + ".png\" title=\"" + 
               (row[11] == "0" ? 'em aberto' : (row[11] == "1" ? 'conciliado' : 'consolidado')) + "\"/>" +
@@ -178,25 +192,6 @@
     }
     fields[12] = "none"; // ap.category
     fields[13] = "none"; // ap1.category
-/*
-    fields[9] = "realNull";
-    fields[11] = {
-      type : "format",
-      decode: function(name, row) {
-        var ret = "";
-        if (row[11] != "0") {
-          ret = "<a href='#' data-id='" + row [11] + "' data-idofx='" + row [4] + "' class='action_conciliate'><img width='16px' title='conciliar' src='/images/tick.png'></a>" 
-        } else {
-          ret = ""
-        }
-        return ret
-      }
-    }
-
-    fields[12] = "none"; // categ do ofx
-    fields[13] = "realNull";
-    fields[14] = "intNull";
-*/
     var url = "/report/account_ofx_conciliation";
     var total_to_pay = 0.00;
     var request = function(){
@@ -223,25 +218,45 @@
         //total_gap = ($('#end_value').val()-conciliated);
         //$("#total_gap").val((total_gap).formatMoney());
         $(".action_consolidate").click(function() {
-          return consolidateOne($(this).attr("data-id"), $(this).attr("data-idofx"), false, 0, false);
+          return conciliateOne(false,
+            $(this).attr("data-id"), 
+            $(this).attr("data-idofx"), 
+            $(this).attr("data-vofx"), false, 
+            $(this).attr("data-vap"), false);
         });
         $(".action_conciliate").click(function() {
-          return conciliateOne($(this).attr("data-id"), $(this).attr("data-idofx"), false, 0, false);
+          return conciliateOne(true, 
+            $(this).attr("data-id"), 
+            $(this).attr("data-idofx"),
+            $(this).attr("data-vofx"), false,
+            $(this).attr("data-vap"), false);
         });
         $(".action_consolidate_aggreg").click(function() {
-          return consolidateOne($(this).attr("data-id"), $(this).attr("data-idofx"), true, $(this).attr("data-vaggreg"), false);
+          return conciliateOne(false,
+            $(this).attr("data-id"), 
+            $(this).attr("data-idofx"), 
+            $(this).attr("data-vofx"), true, 
+            $(this).attr("data-vaggreg"), false);
         });
         $(".action_conciliate_aggreg").click(function() {
-          return conciliateOne($(this).attr("data-id"), $(this).attr("data-idofx"), true, $(this).attr("data-vaggreg", false));
+          return conciliateOne(true, 
+            $(this).attr("data-id"), 
+            $(this).attr("data-idofx"), 
+            $(this).attr("data-vofx"), true, 
+            $(this).attr("data-vaggreg"), false);
         });
         $(".action_consolidate_aggreg_partial").click(function() {
-          return consolidateOne($(this).attr("data-id"), 
-            $(this).attr("data-idofx"), true, 
+          return conciliateOne(false,
+            $(this).attr("data-id"), 
+            $(this).attr("data-idofx"), 
+            $(this).attr("data-vofx"), true, 
             $(this).attr("data-vaggreg"), true);
         });
         $(".action_conciliate_aggreg_partial").click(function() {
-          return conciliateOne($(this).attr("data-id"), 
-            $(this).attr("data-idofx"), true, 
+          return conciliateOne(true, 
+            $(this).attr("data-id"), 
+            $(this).attr("data-idofx"), 
+            $(this).attr("data-vofx"),true, 
             $(this).attr("data-vaggreg"), true);
         });
         $(".action_remove").click(function() {
@@ -250,7 +265,7 @@
             AuthUtil.user.groupPermission == '1') {
             return deleteOne($(this).attr("data-idofx"));
           } else {
-            return alert ("Apenas adminsitrador pode excluir ofx ")
+            return alert ("Apenas administrador pode excluir ofx ")
           }
         });
         $(".action_change").click(function() {
@@ -313,24 +328,42 @@
       }
     };
 
-    var conciliateOne = function(id, idofx, aggreg, 
-      vaggreg, partial) {
-      var msg = "";
-      var msgAux = "";
+    var conciliateOne = function(concil, id, 
+      idofx, vofx, aggreg, valOrggreg, partial) {
+      var action = ""; var action1 = "";
+      var msg = ""; var msgAux = "";
+      var msgCompl = "";
+      if (concil) {
+        action = "conciliar"; action1 = "conciliado";
+      } else {
+        action = "consolidar"; action1 = "consolidado";
+      }
       if (partial == true || partial == "true") {
+        if (vofx < valOrggreg) {
+          msgCompl = " Valor ofx " + vofx + " menor que valor agregado " + valOrggreg
+        }
         msgAux = " parcialmente "
       } else {
+        if (vofx != valOrggreg) {
+          msgCompl = " Valor ofx " + vofx + " diferente do valor " + valOrggreg
+        }
         msgAux = " "
       }
       if (aggreg) {
-         msg = "Tem certeza que deseja conciliar" + msgAux + "os lançamentos agregados?" 
+         msg = "Tem certeza que deseja " + action +  msgAux + "os lançamentos agregados?" + msgCompl
       } else {
-         msg = "Tem certeza que deseja conciliar" + msgAux + "o lançamento?" 
+         msg = "Tem certeza que deseja " + action + msgAux + "o lançamento?" + msgCompl
       }
       if (confirm(msg)) {
-        return $.get("/accountpayable/conciliateofx/" + id +"/" + idofx + "/" + aggreg + "/" + partial, function(results) {
+        var url = "";
+        if (concil) {
+          url = "/accountpayable/conciliateofx/"
+        } else {
+          url = "/accountpayable/consolidateofx/"
+        }
+        return $.get(url + id +"/" + idofx + "/" + aggreg + "/" + partial, function(results) {
           if(results === 1 || results == "1"){
-            alert("Lançamento(s) conciliado(s) com sucesso!");  
+            alert("Lançamento(s) " + action1 + "(s) com sucesso!");  
           }else{
             alert(eval(results));
           }
@@ -338,8 +371,8 @@
         });
       }
     };
-
-    var consolidateOne = function(id, idofx, aggreg, 
+/*
+    var consolidateOne = function(id, idofx, vofx, aggreg, 
       vaggreg, partial) {
       var msg = "";
       var msgAux = "";
@@ -364,7 +397,7 @@
         });
       }
     };
-
+*/
     $("#consolidate").click(function() {
       var checkeds, idsToMark;
       checkeds = $('.account_payable:checked').toArray();
