whatsapp plugin new text

--- a/src/main/webapp/templates-hidden/footer.html
+++ b/src/main/webapp/templates-hidden/footer.html
@@ -13,13 +13,13 @@
          }
          </style>
          <div class="desk">
-            <a target="new" href="https://web.whatsapp.com/send?phone=+553191540340&text=Marque sua consulta pelo WhatsApp" style="position: fixed; z-index: 9999; bottom: 20px;
+            <a target="new" href="https://web.whatsapp.com/send?phone=+553191540340&text=Tire sua dúvida pelo WhatsApp" style="position: fixed; z-index: 9999; bottom: 20px;
                right: 20px;">
                <img src="/images/whatsapp.png" style="width: 100px;" />
             </a>
          </div>
          <div class="mobil">
-            <a target="new" href="whatsapp://send?phone=+553191540340&text=Marque sua consulta pelo WhatsApp" style="position: fixed; z-index: 9999; bottom: 20px;
+            <a target="new" href="whatsapp://send?phone=+553191540340&text=Tire sua dúvida pelo WhatsApp" style="position: fixed; z-index: 9999; bottom: 20px;
                right: 20px;">
                <img src="/images/whatsapp.png" style="width: 100px;" />
             </a>
