--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -4,6 +4,7 @@
   </style>
   <script type="text/javascript" src="/js/account_register.js?_2"></script>
   <script type="text/javascript" src="/js/dre_report.js"></script>
+  <script type="text/javascript" src="/js/writtenform.js"></script>
   <script type="text/javascript" src="/js/jquery.tablesorter.pager.js"></script>
   <div class="hide_on_print">
     <div class="well">
@@ -564,7 +565,7 @@
                     <label for="cheque_select">Cheque</label>
                       <div class="input">
                         <div class="inline-inputs">
-                          <select id='cheque_select' class="cheque_select url_parameter xlarge" name='cheque'></select>
+                          <select id='cheque_select' class="cheque_select url_parameter xlarge" name='cheque' multiple="multiple"></select>
                           <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/cheque.html' rel="popover" class="_popover_basic _help">
                             <img src="/images/info.gif" width="20">
                           </a>
