T report new status- what is open (not paid missed rescheduled deleted)

--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -110,7 +110,7 @@
                           Todos, exceto excluído
                         </option>
                         <option value="NoPaid">
-                          Todos, exceto pago e excluído
+                          Todos em aberto
                         </option>
                         <option value="7">
                           Pré Agendado
