--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -423,13 +423,13 @@
                             </div>
                         </div>
                         <div class="clearfix">
-                            <label for="name">Rua</label>
+                            <label for="street">Logradouro</label>
                             <div class="input">
                                 <div class='inline-inputs'>
                                     <input class="xlarge" id="street" name="street" size="30" type="text"/>
                                     <input class="mini" id="number" name="number" size="5 " type="text"/>           
                                 </div>
-                                <span class="help-block">Rua/Número</span>
+                                <span class="help-block">Rua, Avenida, Alameda/Número</span>
                             </div>
                         </div>
                         <div class="clearfix">
