--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -465,7 +465,7 @@
                     <div class='span8'>
                         <div class="form-inline">
                             <div class="form-group">
-                                <label for="street">Rua e número</label>
+                                <label for="street">Logradouro e número</label>
                                 <input class="form-control" id="street" name="street" size="30" type="text"/>
                                 <input class="form-control" id="number" name="number" size="5 " type="text"/>
                             </div>
