--- a/src/main/webapp/financial_admin/control_panel.html
+++ b/src/main/webapp/financial_admin/control_panel.html
@@ -7,6 +7,12 @@
       </h1>
       <br/>
   <div class="clearfix">
+    <label for="send"></label>
+      <div class="input">
+          <button type="button" id="send" class="btn success">Buscar</button>
+      </div>
+  </div>
+  <div class="clearfix">
     <label for="count">Total </label>
     <div class="input">
       <div class="inline-inputs">
