setting cheque received or not for other movement whit the same cheque, ex when paying suppliers with customer cheque

--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -436,6 +436,11 @@
             <img width='32' src="/images/commision_payment.png"/>
           </a>
         </li>
+        <li class="lift:SecuritySnippet.isSuperAdmin">
+          <a href="/project/project_kanban.html" class="_popover" target="_blancccck" rel="popover" data-content="Kanban" data-original-title="Kanban">
+            <img width='32' src="/images/kanban.png"/>
+          </a>
+        </li>
       </ul>    
     </span>
   </span>
