cheque obs in cashier - dates other than duedate in financial

--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -255,7 +255,7 @@
       <tr>
         <th><input type="checkbox" id='check_all'/></th>
         <th>Id</th>
-        <th title="Data de vencimento">Dt Venc</th>
+        <th title="A Data de Vencimento sempre é exibida, caso outro tipo de data seja selecionado a data correspondente é exibida na sequência caso seja diferente da data de vencimento">Dt Venc</th>
         <th>Categoria</th>
         <th>Descrição</th>
         <th>Valor</th>
